<resources>
    <string name="app_name" translatable="false">Covid-19 Info</string>
    <string name="title_cases">Cases: </string>
    <string name="title_deaths">Deaths</string>
    <string name="title_regions" translatable="false">Regions</string>
    <string name="title_total_recovered">Total recovered</string>
    <string name="title_new_deaths">New deaths</string>
    <string name="title_new_cases">New cases</string>
    <string name="title_serious_critical">Serious critical</string>
    <string name="title_active_cases">Active cases</string>
    <string name="title_cases_per_one_million_population">Cases per one million population</string>
    <string name="title_search_country">Search country</string>
    <string name="title_date">Date:</string>
    <string name="loading">Loading, this can take a few seconds</string>
    <string name="last_updated">Last updated on %s</string>
</resources>
