<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="caseByCountry"
            type="com.alphemsoft.info.coronavirus.data.model.CaseByCountry" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_item_list"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorItemListBackground"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{caseByCountry.id}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_cases"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_cases_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(caseByCountry.cases)}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_cases"
            app:layout_constraintStart_toEndOf="@+id/tv_title_cases"
            app:layout_constraintTop_toTopOf="@+id/tv_title_cases" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_deaths"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_cases" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_deaths_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(caseByCountry.deaths)}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_deaths"
            app:layout_constraintStart_toEndOf="@+id/tv_title_deaths"
            app:layout_constraintTop_toTopOf="@+id/tv_title_deaths" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_regions"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_deaths" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_region_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{caseByCountry.region}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_region"
            app:layout_constraintStart_toEndOf="@+id/tv_title_region"
            app:layout_constraintTop_toTopOf="@+id/tv_title_region" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_total_recovered"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_region" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_recovered_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(caseByCountry.totalRecovered)}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_recovered"
            app:layout_constraintStart_toEndOf="@+id/tv_total_recovered"
            app:layout_constraintTop_toTopOf="@+id/tv_total_recovered" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_new_deaths"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_recovered" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_deaths_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(caseByCountry.newDeaths)}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_new_deaths"
            app:layout_constraintStart_toEndOf="@+id/tv_new_deaths"
            app:layout_constraintTop_toTopOf="@+id/tv_new_deaths" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_serious_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_new_cases"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_deaths" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_serious_critical_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{String.valueOf(caseByCountry.seriousCritical)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_serious_critical"
            app:layout_constraintTop_toTopOf="@+id/tv_serious_critical" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>